--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
-//Sonar plugin at the root
-apply plugin: "sonar-runner"
+/*
+ *    Copyright (C) 2015 QAware GmbH
+ *
+ *    Licensed under the Apache License, Version 2.0 (the "License");
+ *    you may not use this file except in compliance with the License.
+ *    You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *    Unless required by applicable law or agreed to in writing, software
+ *    distributed under the License is distributed on an "AS IS" BASIS,
+ *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *    See the License for the specific language governing permissions and
+ *    limitations under the License.
+ */
 
 buildscript {
     repositories {
@@ -10,7 +23,9 @@ buildscript {
         }
     }
     dependencies {
+        classpath 'com.gradle.publish:plugin-publish-plugin:0.9.1'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
     }
 }
 
@@ -45,6 +60,9 @@ subprojects {
     apply plugin: 'base'
     apply plugin: 'groovy'
     apply plugin: 'java'
+    apply plugin: 'maven-publish'
+    apply plugin: 'com.gradle.plugin-publish'
+    apply plugin: 'com.jfrog.bintray'
 
 
     sourceCompatibility = JavaVersion.VERSION_1_8
@@ -138,25 +156,6 @@ tasks.coveralls {
 
     dependsOn jacocoRootReport
     onlyIf { isCI }
-}
-
-//Sonar stuff
-sonarRunner {
-    sonarProperties {
-        property "sonar.sourceEncoding", "UTF-8"
-    }
-}
-
-sonarRunner {
-    sonarProperties {
-        property "sonar.host.url", "http://localhost:9000/"
-        property "sonar.jdbc.url", "jdbc:h2:tcp://localhost:9092/sonar"
-        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
-        property "sonar.jdbc.username", "sonar"
-        property "sonar.jdbc.password", "sonar"
-        property "sonar.exclusions", "**/ProtocolBuffers.java"
-
-    }
 }
 
 task wrapper(type: Wrapper) {
