Added a simple time series class including a Chronix converter. Moved some Chronix Kassiopeia classes to another package. Updated the README.md

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,6 @@ rootProject.name = 'chronix.kassiopeia'
 
 include 'chronix-kassiopeia-converter'
 include 'chronix-kassiopeia'
+include 'chronix-kassiopeia-simple'
+include 'chronix-kassiopeia-simple-converter'
+
