--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
         classpath 'com.gradle.publish:plugin-publish-plugin:0.9.1'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
     }
 }
 
@@ -63,6 +64,17 @@ subprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'com.gradle.plugin-publish'
     apply plugin: 'com.jfrog.bintray'
+    apply plugin: 'com.github.hierynomus.license'
+
+
+
+    license {
+        includes(["**/*.java", "**/*.groovy"])
+        mapping {
+            java = 'SLASHSTAR_STYLE'
+            groovy = 'SLASHSTAR_STYLE'
+        }
+    }
 
 
     sourceCompatibility = JavaVersion.VERSION_1_8
@@ -110,7 +122,7 @@ subprojects {
 
         additionalSourceDirs = project.files(sourceSets.main.allSource.srcDirs)
         sourceDirectories = project.files(sourceSets.main.allSource.srcDirs)
-        classDirectories =  project.files(sourceSets.main.output)
+        classDirectories = project.files(sourceSets.main.output)
 
         reports {
             xml.enabled = true
