Added protocol buffers serializer for kassiopeia simple. Added kassiopeia-converter-common package to avoid duplicates.

--- a/chronix-kassiopeia-converter/build.gradle
+++ b/chronix-kassiopeia-converter/build.gradle
@@ -17,6 +17,7 @@
 dependencies {
 
     compile project(':chronix-kassiopeia')
+    compile project(':chronix-kassiopeia-converter-common')
 
     compile 'com.google.protobuf:protobuf-java:2.6.1'
     compile 'commons-io:commons-io:2.4'
