--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'chronix-kassiopeia-converter'
 include 'chronix-kassiopeia'
 include 'chronix-kassiopeia-simple'
 include 'chronix-kassiopeia-simple-converter'
+include 'chronix-kassiopeia-converter-common'
 
