--- a/build.gradle
+++ b/build.gradle
@@ -195,7 +195,7 @@ sonarRunner {
         property "sonar.jdbc.username", "$jdbcUser"
         property "sonar.jdbc.password", "$jdbcPw"
         property "sonar.projectName", "ChronixDB"
-        property "sonar.projectKey", "de.qaware.chronix:chronix-kassiopeia"
+        property "sonar.projectKey", "de.qaware.chronix:chronix-api"
     }
 }
 
