--- a/build.gradle
+++ b/build.gradle
@@ -199,6 +199,7 @@ sonarRunner {
         property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
         property "sonar.jdbc.username", "$jdbcUser"
         property "sonar.jdbc.password", "$jdbcPw"
+        property "sonar.projectName", "ChronixDB"
     }
 }
 
