--- a/build.gradle
+++ b/build.gradle
@@ -200,6 +200,7 @@ sonarRunner {
         property "sonar.jdbc.username", "$jdbcUser"
         property "sonar.jdbc.password", "$jdbcPw"
         property "sonar.projectName", "ChronixDB"
+        property "sonar.exclusions","de/qaware/chronix/converter/serializer/gen/**"
     }
 }
 
