--- a/build.gradle
+++ b/build.gradle
@@ -199,7 +199,7 @@ sonarRunner {
         property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
         property "sonar.jdbc.username", "$jdbcUser"
         property "sonar.jdbc.password", "$jdbcPw"
-        property "sonar.projectName", "ChronixDB"
+        property "sonar.projectName", "ChronixDB-Kassiopeia"
         property "sonar.projectKey", "de.qaware.chronix:chronix-kassiopeia"
         property "sonar.exclusions","src/main/generated/de/qaware/chronix/converter/serializer/gen/*"
     }
