--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,3 @@
-/*
- *    Copyright (C) 2015 QAware GmbH
- *
- *    Licensed under the Apache License, Version 2.0 (the "License");
- *    you may not use this file except in compliance with the License.
- *    You may obtain a copy of the License at
- *
- *        http://www.apache.org/licenses/LICENSE-2.0
- *
- *    Unless required by applicable law or agreed to in writing, software
- *    distributed under the License is distributed on an "AS IS" BASIS,
- *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *    See the License for the specific language governing permissions and
- *    limitations under the License.
- */
- 
-//Sonar plugin at the root
-apply plugin: "sonar-runner"
-
 buildscript {
     repositories {
         jcenter()
@@ -33,6 +14,37 @@ buildscript {
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
     }
 }
+
+
+plugins {
+    id "org.sonarqube" version "1.2"
+}
+
+apply plugin: 'org.sonarqube'
+
+
+sonarqube {
+    def sonarUser = project.hasProperty('sonarUser') ? project.sonarUser : 'unknown'
+    def sonarPw = project.hasProperty('sonarPw') ? project.sonarPw : 'unknown'
+
+    def jdbcUser = project.hasProperty('jdbcUser') ? project.jdbcUser : 'unknown'
+    def jdbcPw = project.hasProperty('jdbcPw') ? project.jdbcPw : 'unknown'
+
+    properties {
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.host.url", "https://www.qaware.de/sonar"
+        property "sonar.login", "$sonarUser"
+        property "sonar.password", "$sonarPw"
+        property "sonar.jdbc.url", "jdbc:mysql://nio-prj-2.intern.qaware.de:3306/sonardb?useUnicode=true&characterEncoding=utf8"
+        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
+        property "sonar.jdbc.username", "$jdbcUser"
+        property "sonar.jdbc.password", "$jdbcPw"
+        property "sonar.projectName", "ChronixDB"
+        property "sonar.projectKey", "de.qaware.chronix:chronix"
+        property "sonar.projectVersion","$project.version"
+    }
+}
+
 
 allprojects {
 
@@ -71,7 +83,7 @@ subprojects {
 
 
     license {
-        includes(["**/*.java", "**/*.groovy"])
+        includes(["**/*.java", "**/*.groovy","*.gradle"])
         mapping {
             java = 'SLASHSTAR_STYLE'
             groovy = 'SLASHSTAR_STYLE'
@@ -79,8 +91,8 @@ subprojects {
     }
 
 
-	sonarRunner {
-        sonarProperties {
+    sonarqube {
+        properties {
             property "sonar.sourceEncoding", "UTF-8"
         }
     }
@@ -180,28 +192,6 @@ tasks.coveralls {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.4'
-}
-sonarRunner {
-    def sonarUser = project.hasProperty('sonarUser') ? project.sonarUser : 'unknown'
-    def sonarPw = project.hasProperty('sonarPw') ? project.sonarPw : 'unknown'
-
-    def jdbcUser = project.hasProperty('jdbcUser') ? project.jdbcUser : 'unknown'
-    def jdbcPw = project.hasProperty('jdbcPw') ? project.jdbcPw : 'unknown'
-
-    sonarProperties {
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.host.url", "https://www.qaware.de/sonar"
-        property "sonar.login", "$sonarUser"
-        property "sonar.password", "$sonarPw"
-        property "sonar.jdbc.url", "jdbc:mysql://nio-prj-2.intern.qaware.de:3306/sonardb?useUnicode=true&characterEncoding=utf8"
-        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
-        property "sonar.jdbc.username", "$jdbcUser"
-        property "sonar.jdbc.password", "$jdbcPw"
-        property "sonar.projectName", "ChronixDB-Kassiopeia"
-        property "sonar.projectKey", "de.qaware.chronix:chronix-kassiopeia"
-        property "sonar.projectVersion", "$project.version"
-        property "sonar.exclusions","src/main/generated/de/qaware/chronix/converter/serializer/gen/*"
-    }
+    gradleVersion = '2.10'
 }
 
