--- a/chronix-kassiopeia-simple-converter/build.gradle
+++ b/chronix-kassiopeia-simple-converter/build.gradle
@@ -1,3 +1,9 @@
+sonarqube {
+    properties {
+        property "sonar.projectName", "de.qaware.chronix:chronix-kassiopeia-simple-converter"
+    }
+}
+
 dependencies {
 
     compile project(':chronix-kassiopeia-simple')
