--- a/chronix-kassiopeia-simple/build.gradle
+++ b/chronix-kassiopeia-simple/build.gradle
@@ -1,3 +1,10 @@
+sonarqube {
+    properties {
+        property "sonar.projectName", "de.qaware.chronix:chronix-kassiopeia-simple"
+    }
+}
+
+
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.1'
 }
