--- a/build.gradle
+++ b/build.gradle
@@ -23,29 +23,6 @@ plugins {
 apply plugin: 'org.sonarqube'
 
 
-sonarqube {
-    def sonarUser = project.hasProperty('sonarUser') ? project.sonarUser : 'unknown'
-    def sonarPw = project.hasProperty('sonarPw') ? project.sonarPw : 'unknown'
-
-    def jdbcUser = project.hasProperty('jdbcUser') ? project.jdbcUser : 'unknown'
-    def jdbcPw = project.hasProperty('jdbcPw') ? project.jdbcPw : 'unknown'
-
-    properties {
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.host.url", "https://www.qaware.de/sonar"
-        property "sonar.login", "$sonarUser"
-        property "sonar.password", "$sonarPw"
-        property "sonar.jdbc.url", "jdbc:mysql://nio-prj-2.intern.qaware.de:3306/sonardb?useUnicode=true&characterEncoding=utf8"
-        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
-        property "sonar.jdbc.username", "$jdbcUser"
-        property "sonar.jdbc.password", "$jdbcPw"
-        property "sonar.projectName", "ChronixDB"
-        property "sonar.projectKey", "de.qaware.chronix:chronix"
-        property "sonar.projectVersion","$project.version"
-    }
-}
-
-
 allprojects {
 
     apply plugin: 'jacoco'
@@ -195,3 +172,26 @@ task wrapper(type: Wrapper) {
     gradleVersion = '2.10'
 }
 
+
+sonarqube {
+    def sonarUser = project.hasProperty('sonarUser') ? project.sonarUser : 'unknown'
+    def sonarPw = project.hasProperty('sonarPw') ? project.sonarPw : 'unknown'
+
+    def jdbcUser = project.hasProperty('jdbcUser') ? project.jdbcUser : 'unknown'
+    def jdbcPw = project.hasProperty('jdbcPw') ? project.jdbcPw : 'unknown'
+
+    properties {
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.host.url", "https://www.qaware.de/sonar"
+        property "sonar.login", "$sonarUser"
+        property "sonar.password", "$sonarPw"
+        property "sonar.jdbc.url", "jdbc:mysql://nio-prj-2.intern.qaware.de:3306/sonardb?useUnicode=true&characterEncoding=utf8"
+        property "sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
+        property "sonar.jdbc.username", "$jdbcUser"
+        property "sonar.jdbc.password", "$jdbcPw"
+        property "sonar.projectName", "Chronix-Kassiopeia"
+        property "sonar.projectKey", "de.qaware.chronix:chronix.kassiopeia"
+        property "sonar.projectVersion","$project.version"
+        property "sonar.exclusions","src/main/generated/de/qaware/chronix/converter/serializer/gen/*"
+    }
+}
