--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ allprojects {
     apply plugin: 'jacoco'
     apply plugin: 'com.github.kt3k.coveralls'
 
-    version '0.1.2'
+    version '0.1.2-b'
 
     group 'de.qaware.chronix'
 
