Inital commit for strace time series stuff

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ include 'chronix-kassiopeia'
 include 'chronix-kassiopeia-simple'
 include 'chronix-kassiopeia-simple-converter'
 include 'chronix-kassiopeia-converter-common'
+include 'chronix-kassiopeia-strace'
+include 'chronix-kassiopeia-converter-strace'
 
