--- a/chronix-kassiopeia-simple-converter/build.gradle
+++ b/chronix-kassiopeia-simple-converter/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     compile 'com.google.protobuf:protobuf-java:2.6.1'
 
 
+    testCompile 'org.apache.solr:solr-solrj:6.0.0'
+    testCompile 'de.qaware.chronix:chronix-server-client:0.2-beta-1'
 }
 
 //add the generated classes to the sources
