--- a/chronix-kassiopeia-converter-strace/build.gradle
+++ b/chronix-kassiopeia-converter-strace/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
     compile project(':chronix-kassiopeia-strace')
+    compile project(':chronix-kassiopeia-simple-converter')
     compile project(':chronix-kassiopeia-converter-common')
 
     compile 'de.qaware.chronix:chronix-api:0.1'
