--- a/chronix-kassiopeia-simple-converter/gradle.properties
+++ b/chronix-kassiopeia-simple-converter/gradle.properties
@@ -1,7 +1,7 @@
 version=0.0.1
 
 displayName=Chronix Kassiopeia Simple Converter
-description=Chronix Kassiopeia simple is a time series that can be used by Chronix Server / Storage.
+description=The converter package for the kassiopeia simple time series
 websiteUrl=https://github.com/ChronixDB/chronix.kassiopeia
 scmUrl=https://github.com/ChronixDB/chronix.kassiopeia.git
 issueTrackerUrl=https://github.com/ChronixDB/chronix.kassiopeia/issues
