Large refactoring. Moved LongList.java and DoubleList.java to Kassiopeia-Common.

--- a/chronix-kassiopeia-common/gradle.properties
+++ b/chronix-kassiopeia-common/gradle.properties
@@ -1,6 +1,6 @@
 version=0.0.1
 
-displayName=Chronix Kassiopeia Converter Common
+displayName=Chronix Kassiopeia Common
 description=A common package with classes used by the Kassiopeia time seris as well as by the Simple Kassiopeia time series.
 websiteUrl=https://github.com/ChronixDB/chronix.kassiopeia
 scmUrl=https://github.com/ChronixDB/chronix.kassiopeia.git
