--- a/chronix-kassiopeia-common/build.gradle
+++ b/chronix-kassiopeia-common/build.gradle
@@ -1,6 +1,6 @@
 sonarqube {
     properties {
-        property "sonar.projectName", "de.qaware.chronix:chronix-kassiopeia-converter-common"
+        property "sonar.projectName", "de.qaware.chronix:chronix-kassiopeia-common"
     }
 }
 
@@ -8,6 +8,7 @@ sonarqube {
 dependencies {
     compile 'de.qaware.chronix:chronix-api:0.1'
     compile 'commons-io:commons-io:2.4'
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
 
 
@@ -69,7 +70,7 @@ def pomConfig = {
 
 publishing {
     publications {
-        chronixKassiopeiaConverterCommon(MavenPublication) {
+        chronixKassiopeiaCommon(MavenPublication) {
             from components.java
             artifact sourcesJar
             artifact javadocJar
@@ -88,7 +89,7 @@ publishing {
 bintray {
     user = project.hasProperty('bintrayUsername') ? project.bintrayUsername : 'unknown'
     key = project.hasProperty('bintrayApiKey') ? project.bintrayApiKey : 'unknown'
-    publications = ['chronixKassiopeiaConverterCommon']
+    publications = ['chronixKassiopeiaCommon']
     dryRun = false
     publish = true
     pkg {
@@ -107,7 +108,7 @@ bintray {
             released = new Date().format("yyyy-MM-dd'T'HH:mm:ss.SSSZZ")
             vcsTag = "v${project.version}"
             attributes = [
-                    'chronix-kassiopeia-converter-common': ['de.qaware.chronix', project.group, project.name].join(':')
+                    'chronix-kassiopeia-common': ['de.qaware.chronix', project.group, project.name].join(':')
             ]
             mavenCentralSync {
                 sync = false
