--- a/chronix-kassiopeia-simple/build.gradle
+++ b/chronix-kassiopeia-simple/build.gradle
@@ -7,6 +7,7 @@ sonarqube {
 
 dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile project(':chronix-kassiopeia-common')
 }
 task copyTestResources(type: Copy) {
     from "${projectDir}/src/test/resources"
