--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,10 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-		
-    }
-    dependencies {
-        classpath 'com.gradle.publish:plugin-publish-plugin:0.9.4'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
-        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
-    }
-}
-
-
 plugins {
-    id "org.sonarqube" version "1.2"
+    id "org.sonarqube" version "2.1"
+    id "de.undercouch.download" version "3.1.1"
+    id "com.gradle.plugin-publish" version "0.9.6"
+    id "com.github.hierynomus.license" version "0.13.1"
+    id "com.jfrog.bintray" version "1.7"
+    id 'com.github.kt3k.coveralls' version '2.6.3'
 }
 
 apply plugin: 'org.sonarqube'
@@ -28,7 +15,7 @@ allprojects {
     apply plugin: 'jacoco'
     apply plugin: 'com.github.kt3k.coveralls'
 
-    version '0.3.3-fast'
+    version '0.3.9-beta'
 
     group 'de.qaware.chronix'
 
@@ -41,7 +28,7 @@ allprojects {
     }
 
     jacoco {
-        toolVersion = '0.7.2.201409121644'
+        toolVersion = '0.7.6.201602180812'
     }
 
 }
@@ -169,7 +156,7 @@ tasks.coveralls {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.10'
+    gradleVersion = '3.1'
 }
 
 
