Updated some dependencies.

--- a/chronix-timeseries-common/gradle.properties
+++ b/chronix-timeseries-common/gradle.properties
@@ -1,7 +1,7 @@
 version=0.0.1
-displayName=Chronix Kassiopeia Common
-description=A common package with classes used by the Kassiopeia time seris as well as by the Simple Kassiopeia time series.
-websiteUrl=https://github.com/ChronixDB/chronix.kassiopeia
-scmUrl=https://github.com/ChronixDB/chronix.kassiopeia.git
-issueTrackerUrl=https://github.com/ChronixDB/chronix.kassiopeia/issues
+displayName=Chronix Time Series Common
+description=A common package with classes used by the chronix time series.
+websiteUrl=https://github.com/ChronixDB/chronix.timeseries
+scmUrl=https://github.com/ChronixDB/chronix.timeseries.git
+issueTrackerUrl=https://github.com/ChronixDB/chronix.timeseries/issues
 bintrayRepo=maven
