--- a/chronix-timeseries/gradle.properties
+++ b/chronix-timeseries/gradle.properties
@@ -1,7 +1,7 @@
 version=0.0.1
-displayName=Chronix Kassiopeia
-description=Chronix Kassiopeia is the time series that is used per default by Chronix Server / Storage.
-websiteUrl=https://github.com/ChronixDB/chronix.kassiopeia
-scmUrl=https://github.com/ChronixDB/chronix.kassiopeia.git
-issueTrackerUrl=https://github.com/ChronixDB/chronix.kassiopeia/issues
+displayName=Chronix Time Series
+description=Chronix time series is a framework to work with time series
+websiteUrl=https://github.com/ChronixDB/chronix.timeseries
+scmUrl=https://github.com/ChronixDB/chronix.timeseries.git
+issueTrackerUrl=https://github.com/ChronixDB/chronix.timeseries/issues
 bintrayRepo=maven
