--- a/chronix-timeseries-converter/gradle.properties
+++ b/chronix-timeseries-converter/gradle.properties
@@ -1,7 +1,7 @@
 version=0.0.1
-displayName=Chronix Kassiopeia Converter
-description=Chronix Kassiopeia Converter allows one to plug Kassiopeia into Chronix Server / Storage.
-websiteUrl=https://github.com/ChronixDB/chronix.kassiopeia
-scmUrl=https://github.com/ChronixDB/chronix.kassiopeia.git
-issueTrackerUrl=https://github.com/ChronixDB/chronix.kassiopeia/issues
+displayName=Chronix Time Series Converter
+description=Chronix Time Series Converter allows one to plug Chronix Time Series into Chronix Server / Storage.
+websiteUrl=https://github.com/ChronixDB/chronix.timeseries
+scmUrl=https://github.com/ChronixDB/chronix.timeseries.git
+issueTrackerUrl=https://github.com/ChronixDB/chronix.timeseries/issues
 bintrayRepo=maven
