--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ allprojects {
     apply plugin: 'jacoco'
     apply plugin: 'com.github.kt3k.coveralls'
 
-    version '0.3.1'
+    version '0.3.2'
 
     group 'de.qaware.chronix'
 
@@ -167,7 +167,7 @@ sonarqube {
 
     properties {
         property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.host.url", "https://www.qaware.de/sonar"
+        property "sonar.host.url", "https://www.qaware.de/sonarqube"
         property "sonar.login", "$sonarUser"
         property "sonar.password", "$sonarPw"
         property "sonar.jdbc.url", "jdbc:mysql://nio-prj-2.intern.qaware.de:3306/sonardb?useUnicode=true&characterEncoding=utf8"
