--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ allprojects {
     apply plugin: 'jacoco'
     apply plugin: 'com.github.kt3k.coveralls'
 
-    version '0.3.2'
+    version '0.3.2-beta'
 
     group 'de.qaware.chronix'
 
